--- a/audio-video.html
+++ b/audio-video.html
@@ -1,6 +1,12 @@
-<html>
-
-    <body>
-        <h1>Git What</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML5 audio-video</title>
+</head>
+<body>
+    
+</body>
 </html>
