--- a/audio-video.html
+++ b/audio-video.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Exploring HTML5<!--<HTML:5></HTML:5>--></h1>
-    <audio src="./Resourses/audio/Goat-Baby-Cry.mp3">Audio Goat</audio>
+    <audio src="./Resourses/audio/Goat-Baby-Cry.mp3" controls>Audio Goat</audio>
 </body>
 </html>
