--- a/audio-video.html
+++ b/audio-video.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Exploring HTML5<!--<HTML:5></HTML:5>--></h1>
     <audio src="./Resourses/audio/Goat-Baby-Cry.mp3" controls>Audio Goat</audio>
+    <video src="./Resourses/Videos/sample-10s.mp4" controls width="1200">10s video</video>
+    <br>
+    <iframe width="598" height="400" src="https://www.youtube-nocookie.com/embed/Ojy_qZ5v-JU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
