--- a/semantic.html
+++ b/semantic.html
@@ -7,28 +7,43 @@
     <title>Learning semantic Document</title>
 </head>
 <body>
-    <div class="header">
-        <a href="">link 1</a><a href="">link 2</a><a href="">link 3</a>
+    <header class="header">
+        <nav>
+            <a href="">link 1</a><a href="">link 2</a><a href="">link 3</a>
+        </nav>    
     <h1>Welcome to a Webpage</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga facilis magni omnis maxime, totam quidem fugit in dignissimos sequi, nam necessitatibus. Voluptatem nisi aperiam maxime dolorem architecto aliquid sit perferendis</p>
-    </div>
-    <div class="container">
-        <div class="blog">
+    </header>
+    <main>
+    <section class="container">
+        <h1>Read My Blog</h1>
+        <article class="blog">
             <h3>my blog part 1</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam recusandae alias, inventore illum, excepturi molestiae ducimus cumque quos cupiditate laudantium aliquid veniam blanditiis amet, fugiat ut. Nesciunt quod aliquid quis provident libero, quos voluptas rerum eum minus aliquam saepe rem aspernatur quidem, dolor delectus iste unde assumenda, est corporis voluptatem.</p>
-        </div>
-        <div class="blog">
+        </article>
+        <article class="blog">
             <h3>my blog part 2</h3>
             <p>Reiciendis, amet perferendis eos quasi ad odit incidunt repellendus inventore quis asperiores aliquam rerum praesentium iusto voluptate dolore exercitationem ut doloribus tempora. Consequatur, aut? Vitae, nihil enim! Sunt mollitia quod, soluta vitae vel harum aut minus esse eius optio hic tempore quibusdam perspiciatis enim nemo placeat quisquam laborum doloribus ratione.</p>
-        </div>
-        <div class="blog">
+        </article>
+        <article class="blog">
             <h3>my blog part 3</h3>
             <p>Placeat, eveniet fugit? Cupiditate nobis numquam adipisci maiores eum molestiae. Officia necessitatibus aperiam laboriosam dolores. Atque asperiores impedit facere. Quo aliquid, magnam molestias ducimus non corrupti laudantium expedita molestiae veniam voluptates soluta adipisci sit, architecto in. Autem natus quis minus molestias at asperiores iste minima fugiat eveniet animi, eligendi qui!</p>
-        </div>
-        <div class="blog">
+        </article>
+        <article class="blog">
             <h3>my blog part 4</h3>
             <p>Illum amet quam maxime harum, corporis porro a soluta sed reiciendis consectetur rerum culpa vitae, nesciunt dicta ratione quo? Quod, nobis reprehenderit. Alias sequi voluptatibus perspiciatis molestiae repudiandae corrupti adipisci doloremque repellendus animi cupiditate nobis iusto illum architecto ex rem ipsam placeat natus quam, fugiat cumque error. Cum, eligendi praesentium?</p>
-        </div>
-    </div>
+        </article>
+    </section>
+    <section class="container">
+        <h3>Recent updates</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus neque magni suscipit corrupti id enim dolor! Incidunt, quos ipsa. Laborum sequi quam, quod accusantium est ad dicta porro saepe quas itaque harum. Dolorum iste sit error, distinctio dolore soluta cumque rem debitis labore deleniti doloremque provident, voluptate accusantium, nisi numquam.</p>
+    </section>
+    </main>
 </body>
+<Footer>
+    <p>
+        No Copyright Content
+    </p>
+</Footer>
+        
 </html>
