tbody table body

--- a/table.html
+++ b/table.html
@@ -5,11 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 table</title>
+    <style>
+        table{
+            border-collapse: collapse;
+        }
+        td{
+            border: 1px solid lightgrey;
+            padding: 0px 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Table got Everywhere</h1>
+    <!-- table row=<tr></tr>
+    table data <td></td>
+    table body= <tbody> -->
+<tbody>
     <table>
-        Every where table
+        <tr>
+            <td>1</td>
+            <td>Name</td>
+            <td>Designation</td>
+            <td>salary</td>
+        </tr>
+        <tr>
+            <td>tabledata1</td>
+            <td>Name</td>
+            <td>Designation</td>
+            <td>salary</td>
+        </tr>
+        <tr>
+            <td>tabledata2</td>
+            <td>Name</td>
+            <td>Designation</td>
+            <td>salary</td>
+        </tr>
+        <tr>
+            <td>tabledata3</td>
+            <td>Name</td>
+            <td>Designation</td>
+            <td>salary</td>
+        </tr>
+        <tr>
+            <td>tabledata4</td>
+            <td>Name</td>
+            <td>Designation</td>
+            <td>salary</td>
+        </tr>
     </table>
+</tbody>    
 </body>
 </html>
