new homepage form+

--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <title>Form Document</title>
 </head>
 <body>
-    <h1>Special TSC Expo</h1>
+    <h1>Special TSC Expo form Fillup</h1>
     <form action="">
         <p>Name: <input type="name" name="name" placeholder="Enter your Name" id="">
         </p>
