--- a/home.html
+++ b/home.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="stylesheet" href="./Styles/nav.css">
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="./home.html"></a></li>
+                <li><a href="./form.html"></a></li>
+                <li><a href="./semantic.html"></a></li>
+                <li><a href="./table.html"></a></li>
+            </ul>
+        </nav>>a>
         <h1>Welcome to Homepage</h1>
     </header>
 </body>
