CSS navHomepage Switch

--- a/home.html
+++ b/home.html
@@ -11,12 +11,13 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./home.html"></a></li>
-                <li><a href="./form.html"></a></li>
-                <li><a href="./semantic.html"></a></li>
-                <li><a href="./table.html"></a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./form.html">Form</a></li>
+                <li><a href="./semantic.html">Semantic</a></li>
+                <li><a href="./table.html">Table</a></li>
+                <li><a href=".">About us</a></li>
             </ul>
-        </nav>>a>
+        </nav>
         <h1>Welcome to Homepage</h1>
     </header>
 </body>
