--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 table</title>
+    <link rel="stylesheet" href="./Styles/nav.css">
     <style>
         table{
             border-collapse: collapse;
@@ -16,6 +17,18 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./form.html">Form</a></li>
+                <li><a href="./semantic.html">Semantic</a></li>
+                <li><a href="./table.html">Table</a></li>
+                <li><a href=".">About us</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome to Homepage</h1>
+    </header>
     <!-- table header head= <thead> 
         table head data= <th>
         table row=<tr></tr>
