--- a/audio-video.html
+++ b/audio-video.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 audio-video</title>
+    <link rel="stylesheet" href="./Styles/nav.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./form.html">Form</a></li>
+                <li><a href="./semantic.html">Semantic</a></li>
+                <li><a href="./table.html">Table</a></li>
+                <li><a href=".">About us</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome to Homepage</h1>
+    </header>
     <h1>Exploring HTML5<!--<HTML:5></HTML:5>--></h1>
     <audio src="./Resourses/audio/Goat-Baby-Cry.mp3" controls>Audio Goat</audio>
     <video src="./Resourses/Videos/sample-10s.mp4" controls width="1200">10s video</video>
