--- a/form.html
+++ b/form.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Document</title>
+    <link rel="stylesheet" href="./Styles/nav.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./form.html">Form</a></li>
+                <li><a href="./semantic.html">Semantic</a></li>
+                <li><a href="./table.html">Table</a></li>
+                <li><a href=".">About us</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome to Homepage</h1>
+    </header>
     <h1>Special TSC Expo form Fillup</h1>
     <form action="">
         <p>Name: <input type="name" name="name" placeholder="Enter your Name" id="">
