CSS navHomepage Switch Welcome Text

--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
                 <li><a href=".">About us</a></li>
             </ul>
         </nav>
-        <h1>Welcome to Homepage</h1>
+        <h1>Welcome to Table</h1>
     </header>
     <h1>Special TSC Expo form Fillup</h1>
     <form action="">
