--- a/table.html
+++ b/table.html
@@ -27,7 +27,7 @@
                 <li><a href=".">About us</a></li>
             </ul>
         </nav>
-        <h1>Welcome to Homepage</h1>
+        <h1>Welcome to Table</h1>
     </header>
     <!-- table header head= <thead> 
         table head data= <th>
