--- a/semantic.html
+++ b/semantic.html
@@ -18,7 +18,7 @@
                 <li><a href=".">About us</a></li>
             </ul>
         </nav>
-        <h1>Welcome to Homepage</h1>
+        <h1>Welcome to Semantic</h1>
     </header>
     <header class="header">
         <nav>
