--- a/home.html
+++ b/home.html
@@ -13,7 +13,16 @@
             <ul>
                 <li><a href="./home.html">Home</a></li>
                 <li><a href="./form.html">Form</a></li>
-                <li><a href="./semantic.html">Semantic</a></li>
+                <li>
+                    <a href="./semantic.html">Semantic
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </a>
+                </li>
                 <li><a href="./table.html">Table</a></li>
                 <li><a href=".">About us</a></li>
             </ul>
