CSS navHomepage nested links correction

--- a/home.html
+++ b/home.html
@@ -16,10 +16,10 @@
                 <li>
                     <a href="./semantic.html">Semantic
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><a href="">link 1</a></li>
+                            <li><a href="">link 2</a></li>
+                            <li><a href="">link 3</a></li>
+                            <li><a href="">link 4</a></li>
                         </ul>
                     </a>
                 </li>
