--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                 <li><a href="./form.html">Form</a></li>
                 <li>
                     <a href="./semantic.html">Semantic
-                        <ul>
+                        <ul class="dropdown">
                             <li><a href="">link 1</a></li>
                             <li><a href="">link 2</a></li>
                             <li><a href="">link 3</a></li>
