--- a/home.html
+++ b/home.html
@@ -28,6 +28,9 @@
             </ul>
         </nav>
         <h1>Welcome to Homepage</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eius consectetur ex doloremque quidem voluptate tempore quaerat quisquam natus nobis eaque cum quo aperiam, officiis voluptatem excepturi! Perferendis optio quis ipsam ea asperiores officiis eius!
+        </p>
     </header>
 </body>
 </html>
