--- a/home.html
+++ b/home.html
@@ -11,20 +11,51 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./home.html">Home</a></li>
-                <li><a href="./form.html">Form</a></li>
+                <li><a href="./home.html">Home
+                    <ul class="dropdown">
+                        <li><a href="./admin/access.html">link 1</a></li>
+                        <li><a href="./admin/users.html">link 2</a></li>
+                        <li><a href="">link 3</a></li>
+                        <li><a href="">link 4</a></li>
+                    </ul>
+                </a>
+            </li>
+            <li><a href="./form.html">Form
+                <ul class="dropdown">
+                    <li><a href="./admin/access.html">link 1</a></li>
+                    <li><a href="./admin/users.html">link 2</a></li>
+                    <li><a href="">link 3</a></li>
+                    <li><a href="">link 4</a></li>
+                </ul>
+            </a>
+            </li>
                 <li>
                     <a href="./semantic.html">Semantic
                         <ul class="dropdown">
-                            <li><a href="">link 1</a></li>
-                            <li><a href="">link 2</a></li>
+                            <li><a href="./admin/access.html">link 1</a></li>
+                            <li><a href="./admin/users.html">link 2</a></li>
                             <li><a href="">link 3</a></li>
                             <li><a href="">link 4</a></li>
                         </ul>
                     </a>
                 </li>
-                <li><a href="./table.html">Table</a></li>
-                <li><a href=".">About us</a></li>
+                <li><a href="./table.html">Table 
+                    <ul class="dropdown">
+                        <li><a href="./admin/access.html">link 1</a></li>
+                        <li><a href="./admin/users.html">link 2</a></li>
+                        <li><a href="">link 3</a></li>
+                        <li><a href="">link 4</a></li>
+                    </ul>
+                </a></li>
+                <li><a href=".">About us
+                    <ul class="dropdown">
+                        <li><a href="./admin/access.html">link 1</a></li>
+                        <li><a href="./admin/users.html">link 2</a></li>
+                        <li><a href="">link 3</a></li>
+                        <li><a href="">link 4</a></li>
+                    </ul>
+                </a>
+            </li>
             </ul>
         </nav>
         <h1>Welcome to Homepage</h1>
